web/skins/classic/css/base/views/montage.css
#layout {
    margin-right: 10px;
}

#content {
  /*
    width: 99%;
    */
}

#monitors {
  height: 100%;
  overflow-y: auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
#monitors:after {
  content: ".";
  display: block;
  height: 0;
  font-size: 0;
  clear: both;
  visibility: hidden;
}

#monitors .monitor {
  float: none;
  min-width: 180px;
  margin: 0;
  padding: 0;
  border-radius: 0;
  position: relative;
}

.monitorStream {
  position: relative;
}

#monitors .monitorStatus {
  margin: 2px auto;
  text-align: center;
  border: 0;
  padding: 0;
  min-height: 16px;
}
#monitors .alert .monitorStatus {
  border: 0;
}

.zones polygon {
  fill-opacity: 0.25;
}
.Active {
  stroke: #ff0000;
  fill: #ff0000;
}
.Inclusive {
  stroke: #FFA500;
  fill: #FFA500;
}
.Exclusive {
  stroke: #800080;
  fill: #800080;
}
.Preclusive {
  stroke: #0000FF;
  fill: #0000FF;
}

#mfbpanel {
  padding-right: 5px;
  padding-left: 5px;
}

